--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -10,6 +10,7 @@
 }
 
 #root {
+  height: 100%;
   min-height: 100%;
   width: 100%;
   margin: 0 auto;
@@ -17,6 +18,7 @@
 }
 
 a {
+  color: $color-white;
   text-decoration: none;
 }
 
@@ -27,10 +29,10 @@ html {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 32rem;
+  height: 100%;
   min-height: 100%;
   background: $color-graphite1;
   color: $color-white;
+  font-size: $font-size-16;
 }
