style: ProposalItem component created

--- a/client/src/components/dedicated/proposal-item/style.module.scss
+++ b/client/src/components/dedicated/proposal-item/style.module.scss
@@ -1,8 +1,4 @@
-.list {
-  margin-top: 2rem;
-}
-
-.proposal {
+.root {
   display: flex;
   flex-direction: column;
   border: 0.1rem solid $color-white;
