--- a/client/src/components/core/button/style.module.scss
+++ b/client/src/components/core/button/style.module.scss
@@ -2,4 +2,9 @@
   border: 0.1rem solid $color-white;
   padding: 1rem 2rem;
   border-radius: 0.5rem;
+  cursor: pointer;
+
+  &.isDisabled {
+    cursor: auto;
+  }
 }
