GE-40 Create stats view prototype

--- a/client/src/components/core/button/style.module.scss
+++ b/client/src/components/core/button/style.module.scss
@@ -4,6 +4,11 @@
   border-radius: 0.5rem;
   cursor: pointer;
 
+  &.isActive {
+    color: $color-red;
+    border: 0.1rem solid $color-red;
+  }
+
   &.isDisabled {
     cursor: auto;
   }
