--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -6,9 +6,14 @@
 }
 
 .header {
-  height: 8rem;
   border-bottom: 0.1rem solid $color-white;
   padding: 1rem 2rem;
+
+  .navigation {
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0 0 0;
+  }
 }
 
 .body {
