--- a/client/src/components/dedicated/proposal-item/style.module.scss
+++ b/client/src/components/dedicated/proposal-item/style.module.scss
@@ -1,7 +1,7 @@
 .root {
   display: flex;
   flex-direction: column;
-  border: 0.1rem solid $color-white;
+  border: 0.1rem solid $color-black;
   padding: 2rem;
   border-radius: $border-radius-standard;
 
