--- a/client/src/styles/_main.scss
+++ b/client/src/styles/_main.scss
@@ -2,5 +2,6 @@
 // put mixins, extends, functions, media queries and other vars here
 // Global imports
 @import './utils/colors';
+@import './utils/mixins';
 @import './utils/typography';
 @import './utils/variables';
