--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -2,3 +2,6 @@ $color-black: #000000;
 $color-white: #FFFFFF;
 $color-graphite1: #191919;
 $color-red: #FF0000;
+
+$color-hexagon-grey: #F8F8F8;
+$color-hexagon-blue: #141DEF;
