GE-34 FE | Allow user to deposit GLM && GE-35 FE | Allow user to withdraw GLM

--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -30,6 +30,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   flex: 1;
   padding: 2rem 2rem ($headerNavigationHeight + 2 * $headerMarginHorizontal) 2rem;
 }
