--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -1,6 +1,7 @@
 $color-black: #000000;
 $color-white: #FFFFFF;
 $color-graphite1: #191919;
+$color-grey: #AAAAAA;
 $color-red: #FF0000;
 
 $color-hexagon-grey: #F8F8F8;
