--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -47,6 +47,10 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   height: $headerNavigationHeight;
   border-radius: $headerNavigationBorderRadius;
   background: $color-white;
-  padding: $headerMarginHorizontal;
+  padding: 2rem;
   box-shadow: $box-shadow-1;
+
+  .button {
+    padding: 0 1rem;
+  }
 }
