--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -5,4 +5,6 @@ $color-grey: #AAAAAA;
 $color-red: #FF0000;
 
 $color-hexagon-grey: #F8F8F8;
+$color-hexagon-grey2: #CDD1CD;
 $color-hexagon-blue: #141DEF;
+$color-hexagon-main-text-color: #271558;
