--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -20,7 +20,7 @@
 }
 
 a {
-  color: $color-white;
+  color: $color-hexagon-main-text-color;
   text-decoration: none;
 }
 
@@ -35,6 +35,6 @@ body {
   height: 100%;
   min-height: 100%;
   background: $color-hexagon-grey;
-  color: $color-black;
+  color: $color-hexagon-main-text-color;
   font-size: $font-size-16;
 }
