HEX-69 Implement InputCheckbox component

--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -5,4 +5,5 @@ $color-grey: #AAAAAA;
 $color-red: #FF0000;
 
 $color-hexagon-grey: #F8F8F8;
+$color-hexagon-grey2: #CDD1CD;
 $color-hexagon-blue: #141DEF;
