--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -1,3 +1,6 @@
 $border-radius-standard: 0.5rem;
+$border-radius-16: 1.6rem;
 
 $box-shadow-1: 0px 0px 25px rgba(0, 0, 0, 0.05);
+
+$transition-time-1: 0.5s;
