feat: proposals view prototype

--- a/client/src/components/core/button/style.module.scss
+++ b/client/src/components/core/button/style.module.scss
@@ -1,6 +1,6 @@
 .root {
   padding: 1rem 2rem;
-  border-radius: 0.8rem;
+  border-radius: $border-radius-16;
   cursor: pointer;
   font-weight: $font-weight-bold;
 }
