--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -8,6 +8,7 @@ $color-hexagon-grey: #F8F8F8;
 $color-hexagon-grey2: #CDD1CD;
 $color-hexagon-grey3: #9EA39E;
 $color-hexagon-grey4: #EBEBEB;
+$color-hexagon-grey5: #FAFAFA;
 $color-hexagon-blue: #141DEF;
 $color-hexagon-main-text-color: #271558;
 $color-hexagon-green: #67D274;
