--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -1,6 +1,11 @@
 $border-radius-standard: 0.5rem;
+$border-radius-10: 1rem;
 $border-radius-16: 1.6rem;
+$border-radius-20: 2rem;
 
 $box-shadow-1: 0px 0px 25px rgba(0, 0, 0, 0.05);
 
 $transition-time-1: 0.5s;
+
+$z-index-2: 2;
+$z-index-3: 3;
