--- a/client/src/views/settings-view/style.module.scss
+++ b/client/src/views/settings-view/style.module.scss
@@ -1,9 +1,5 @@
 .box {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding: 2.2rem 2.4rem;
-  border-radius: $border-radius-16;
-  background: $color-white;
-  font-weight: $font-weight-bold;
+  &:not(:last-child) {
+    margin: 0 0 1.6rem 0;
+  }
 }
