HEX-78 Header: add connected address information

--- a/client/src/components/core/button/style.module.scss
+++ b/client/src/components/core/button/style.module.scss
@@ -8,7 +8,7 @@
 
 .variant-- {
   &cta {
-    color: $color-hexagon-blue;
+    color: $color-white;
     border: 0.1rem solid $color-hexagon-blue;
     background: $color-hexagon-blue;
   }
