--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -9,6 +9,8 @@ $color-hexagon-grey2: #CDD1CD;
 $color-hexagon-grey3: #9EA39E;
 $color-hexagon-grey4: #EBEBEB;
 $color-hexagon-grey5: #FAFAFA;
+$color-hexagon-grey6: #D9D9D9;
 $color-hexagon-blue: #141DEF;
 $color-hexagon-main-text-color: #271558;
 $color-hexagon-green: #67D274;
+$color-hexagon-red: #D0623F;
