--- a/client/src/components/core/box-rounded/style.module.scss
+++ b/client/src/components/core/box-rounded/style.module.scss
@@ -8,4 +8,8 @@
   background: $color-white;
   font-size: $font-size-12;
   font-weight: $font-weight-bold;
+
+  &.isClickable {
+    cursor: pointer;
+  }
 }
