--- a/client/src/styles/utils/_variables.scss
+++ b/client/src/styles/utils/_variables.scss
@@ -1,4 +1,5 @@
 $border-radius-standard: 0.5rem;
+$border-radius-04: 0.4rem;
 $border-radius-10: 1rem;
 $border-radius-16: 1.6rem;
 $border-radius-20: 2rem;
@@ -9,3 +10,4 @@ $transition-time-1: 0.5s;
 
 $z-index-2: 2;
 $z-index-3: 3;
+$z-index-4: 4;
