--- a/client/src/components/core/input-select/style.module.scss
+++ b/client/src/components/core/input-select/style.module.scss
@@ -13,9 +13,40 @@
   }
 }
 
+.menu {
+  position: fixed;
+  top: auto;
+  bottom: 0;
+  left: 0;
+  margin: 0;
+  padding: 3.2rem 2.3rem;
+  border-radius: $border-radius-20 $border-radius-20 0 0;
+  z-index: $z-index-3;
+  box-shadow: $box-shadow-1;
+  height: auto;
+  width: 100%;
+  animation: fadeIn 0.25s linear;
+}
+
+.overlay {
+  @include overlay(100%, 100%);
+}
+
 .buttonClose {
   position: absolute;
   top: 2.4rem;
   right: 2.4rem;
   z-index: $z-index-3;
+}
+
+
+@keyframes fadeIn {
+  0% {
+    // opacity: 0;
+    bottom: -100%;
+  }
+  100% {
+    // opacity: 1;
+    bottom: 0;
+  }
 }
