--- a/client/src/components/core/input-text/style.module.scss
+++ b/client/src/components/core/input-text/style.module.scss
@@ -1,19 +1,58 @@
 .root {
   position: relative;
-  height: 6.4rem;
+  width: 100%;
+
+  &.variant-- {
+    &boxRounded {
+      height: 6.4rem;
+    }
+  }
 }
 
 .label {
-  position: absolute;
-  top: 1rem;
-  left: 2.4rem;
-  font-size: $font-size-08;
-  font-weight: $font-weight-bold;
-  color: $color-hexagon-grey3;
-  z-index: $z-index-2;
+  &.variant-- {
+    &boxRounded {
+      position: absolute;
+      top: 1rem;
+      left: 2.4rem;
+      font-size: $font-size-08;
+      font-weight: $font-weight-bold;
+      color: $color-hexagon-grey3;
+      z-index: $z-index-2;
+    }
+
+    &simple {
+      font-size: $font-size-12;
+      font-weight: $font-weight-bold;
+      color: $color-hexagon-grey3;
+      margin: 0 0 0.5rem 0;
+    }
+  }
+}
+
+.inputWrapper {
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+
+  &.variant-- {
+    &simple {
+      border: 0.1rem solid $color-hexagon-grey4;
+      border-radius: $border-radius-04;
+      background: $color-white;
+      height: 4.8rem;
+
+      &.isDisabled {
+        background: $color-hexagon-grey4;
+      }
+    }
+  }
 }
 
 .input {
+  width: 100%;
+  height: 100%;
   border: 0;
 
   &:focus-visible {
@@ -21,7 +60,7 @@
   }
 
   &.variant-- {
-    &simple {
+    &borderless {
       text-align: center;
       font-size: $font-size-20;
       background: transparent;
@@ -46,14 +85,31 @@
       font-size: $font-size-14;
       font-weight: $font-weight-bold;
     }
+
+    &simple {
+      padding: 1.6rem 0 1.6rem 1.6rem;
+    }
   }
 }
 
 .suffix {
-  position: absolute;
-  top: 50%;
-  right: 2.4rem;
-  transform: translate(0, -50%);
-  z-index: $z-index-2;
-  font-weight: $font-weight-bold;
+  background: transparent;
+
+  &.variant-- {
+    &boxRounded {
+      position: absolute;
+      top: 50%;
+      z-index: $z-index-2;
+      right: 2.4rem;
+      transform: translate(0, -50%);
+      font-weight: $font-weight-bold;
+    }
+
+    &simple {
+      position: relative;
+      z-index: $z-index-2;
+      font-weight: $font-weight-bold;
+      padding: 1rem;
+    }
+  }
 }
