--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -10,7 +10,10 @@ $color-hexagon-grey3: #9EA39E;
 $color-hexagon-grey4: #EBEBEB;
 $color-hexagon-grey5: #FAFAFA;
 $color-hexagon-grey6: #D9D9D9;
+$color-hexagon-grey7: #685B8A;
+$color-hexagon-grey8: #9E9FA3;
 $color-hexagon-blue: #141DEF;
+$color-hexagon-blue2: #D9DBFB;
 $color-hexagon-main-text-color: #271558;
 $color-hexagon-green: #67D274;
 $color-hexagon-red: #D0623F;
