--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -39,6 +39,14 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   justify-content: flex-start;
   flex: 1;
   padding: 2rem 2rem ($headerNavigationHeight + 2 * $headerMarginHorizontal) 2rem;
+
+  &.isLoading {
+    justify-content: center;
+  }
+
+  .loader {
+
+  }
 }
 
 .navigation {
