--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -83,10 +83,11 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
     justify-content: space-between;
     align-items: center;
     height: $headerNavigationHeight;
-    padding: 2rem;
+    padding: 1.2rem 2rem 1.5rem;
   }
 
   .button {
+    height: 100%;
     padding: 0 1rem;
   }
 }
