--- a/client/src/components/dedicated/proposal-item/style.module.scss
+++ b/client/src/components/dedicated/proposal-item/style.module.scss
@@ -7,7 +7,7 @@ $paddingBody: 2.4rem;
   background: $color-white;
 
   &:not(:last-child) {
-    margin: 0 0 1.6rem 0;
+    margin: 0 auto 1.6rem;
   }
 
   .header {
