--- a/client/src/components/core/input-text/style.module.scss
+++ b/client/src/components/core/input-text/style.module.scss
@@ -1,20 +1,14 @@
 .root {
   position: relative;
   width: 100%;
-
-  &.variant-- {
-    &boxRounded {
-      height: 6.4rem;
-    }
-  }
 }
 
 .label {
   &.variant-- {
     &boxRounded {
       position: absolute;
-      top: 1rem;
-      left: 2.4rem;
+      top: -1.2rem;
+      left: 0;
       font-size: $font-size-08;
       font-weight: $font-weight-bold;
       color: $color-hexagon-grey3;
@@ -75,15 +69,9 @@
     }
 
     &boxRounded {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      border-radius: $border-radius-16;
-      height: 100%;
-      padding: 2.4rem;
       font-size: $font-size-14;
       font-weight: $font-weight-bold;
+      background: transparent;
     }
 
     &simple {
