--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -1,5 +1,4 @@
 $headerNavigationHeight: 7.2rem;
-$headerMarginVertical: 4.8rem;
 $headerMarginHorizontal: 2.4rem;
 $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
 
@@ -17,7 +16,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   border-radius: $headerNavigationBorderRadius;
   background: $color-white;
   padding: $headerMarginHorizontal;
-  margin: $headerMarginVertical $headerMarginHorizontal;
+  margin: 1.6rem $headerMarginHorizontal 0;
   box-shadow: $box-shadow-1;
 }
 
@@ -48,7 +47,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   align-items: center;
   justify-content: flex-start;
   flex: 1;
-  padding: 2rem 2rem ($headerNavigationHeight + 2 * $headerMarginHorizontal) 2rem;
+  padding: 1.6rem 2.4rem ($headerNavigationHeight + 2 * $headerMarginHorizontal) 2rem;
 
   &.isLoading {
     justify-content: center;
