--- a/client/src/views/allocation-view/style.module.scss
+++ b/client/src/views/allocation-view/style.module.scss
@@ -34,6 +34,18 @@
   }
 }
 
+.emptyState {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+
+  .buttonDiscord {
+    padding-left: 0;
+  }
+}
+
 .selectedItemOverlay {
   position: fixed;
   z-index: $z-index-2;
