HEX-105 Implement Testnet visual indicator

--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -19,3 +19,4 @@ $color-hexagon-blue3: #CCCEF8;
 $color-hexagon-main-text-color: #271558;
 $color-hexagon-green: #67D274;
 $color-hexagon-red: #D0623F;
+$color-hexagon-orange: #FF6157;
