--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -20,6 +20,40 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   box-shadow: $box-shadow-1;
 }
 
+.logoWrapper {
+  position: relative;
+  height: 4rem;
+}
+
+.testnetIndicatorWrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: -0.4rem;
+  right: 0;
+  transform: translate(75%, 0);
+  background: $color-white;
+  height: 1.6rem;
+  box-sizing: content-box;
+  border-radius: 0.8rem;
+  padding: 0.4rem 0.5rem;
+}
+
+.testnetIndicator {
+  display: flex;
+  align-items: center;
+  font-size: $font-size-10;
+  font-weight: $font-weight-bold;
+  color: $color-white;
+  letter-spacing: 0.1rem;
+  background: $color-hexagon-orange;
+  border-radius: inherit;
+  height: 1.6rem;
+  padding: 0 0.8rem;
+  user-select: none;
+}
+
 .profileInfo {
   display: flex;
   align-items: center;
