HEX-114 Fetch & display matched proposal rewards && HEX-92 Page reload required between approve and deposit TX

--- a/client/src/components/dedicated/allocation-item/style.module.scss
+++ b/client/src/components/dedicated/allocation-item/style.module.scss
@@ -29,6 +29,10 @@
   border-radius: 50%;
   background: $color-hexagon-red;
   margin: 0 0 0 0.4rem;
+
+  &.isAboveThreshold {
+    background: $color-hexagon-green2;
+  }
 }
 
 .percent {
