--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -18,5 +18,7 @@ $color-hexagon-blue2: #D9DBFB;
 $color-hexagon-blue3: #CCCEF8;
 $color-hexagon-main-text-color: #271558;
 $color-hexagon-green: #67D274;
+$color-hexagon-green2: #ADE2B3;
 $color-hexagon-red: #D0623F;
+$color-hexagon-red2: #E23600;
 $color-hexagon-orange: #FF6157;
