--- a/client/src/views/proposal-view/style.module.scss
+++ b/client/src/views/proposal-view/style.module.scss
@@ -58,6 +58,14 @@
     background: $color-hexagon-grey9;
     margin: 0 0.5rem;
   }
+
+  .percentage {
+    color: $color-hexagon-red2;
+
+    &.isAboveThreshold {
+      color: $color-hexagon-green;
+    }
+  }
 }
 
 .buttonAllocate {
