--- a/client/src/components/core/box-rounded/style.module.scss
+++ b/client/src/components/core/box-rounded/style.module.scss
@@ -23,6 +23,10 @@
     flex-direction: column;
   }
 
+  &.hasTabs {
+    padding-top: 1.8rem;
+  }
+
   &.justifyContent-- {
     &center {
       justify-content: center;
@@ -49,7 +53,7 @@
   display: flex;
   justify-content: center;
   align-self: stretch;
-  height: 5.6rem;
+  height: 3.8rem;
   border-bottom: 0.1rem solid $color-hexagon-grey;
   margin: 0 0 2rem 0;
 
