HEX-127 Display staked ratio

--- a/client/src/views/metrics-view/style.module.scss
+++ b/client/src/views/metrics-view/style.module.scss
@@ -6,9 +6,19 @@
   }
 }
 
+.box {
+  &:not(:last-child) {
+    margin: 0 auto 1.6rem;
+  }
+}
+
 .description {
   width: 100%;
   text-align: left;
   color: $color-hexagon-grey3;
   margin: 0 0 2rem 0;
+}
+
+.stakedRatioProgressBar {
+  margin: 1.6rem 0 0 0;
 }
