--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -1,11 +1,11 @@
-$headerNavigationHeight: 7.2rem;
-$headerMarginHorizontal: 2.4rem;
 $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
 
 .root {
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-width: 70.8rem;
+  margin: 0 auto;
 }
 
 .header {
@@ -81,7 +81,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   align-items: center;
   justify-content: flex-start;
   flex: 1;
-  padding: 1.6rem 2.4rem ($headerNavigationHeight + 2 * $headerMarginHorizontal) 2rem;
+  padding: $layoutBodyMarginTop $layoutBodyMarginHorizontal $layoutBodyMarginBottom;
 
   &.isLoading {
     justify-content: center;
@@ -97,6 +97,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   background: $color-white;
   box-shadow: $box-shadow-1;
   max-width: 37.8rem;
+  z-index: $z-index-3;
 
   &.hasNavigationBottomSuffix {
     border-radius: 1.6rem 1.6rem $headerNavigationBorderRadius $headerNavigationBorderRadius;
