HEX-140 Pre-allocate summary

--- a/client/src/layouts/main-layout/style.module.scss
+++ b/client/src/layouts/main-layout/style.module.scss
@@ -121,3 +121,22 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
     padding: 0 1rem;
   }
 }
+
+.iconNumberOfAllocations {
+  position: relative;
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+.numberOfAllocations {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 1.2rem;
+  width: 1.2rem;
+  position: absolute;
+  bottom: 0;
+  right: 0.05rem;
+  color: $color-white;
+  font-size: $font-size-07;
+}
