--- a/client/src/styles/utils/_typography.scss
+++ b/client/src/styles/utils/_typography.scss
@@ -6,6 +6,7 @@ $font-size-14: 1.4rem;
 $font-size-12: 1.2rem;
 $font-size-10: 1rem;
 $font-size-08: 0.8rem;
+$font-size-07: 0.7rem;
 
 $font-weight-bold: 600;
 $font-weight-semibold: 500;
