--- a/client/src/components/core/progress-bar/style.module.scss
+++ b/client/src/components/core/progress-bar/style.module.scss
@@ -1,4 +1,21 @@
 .root {
+  position: relative;
+  width: 100%;
+}
+
+.labels {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 1.4rem 0;
+
+  .label {
+    color: $color-hexagon-grey7;
+    font-size: $font-size-10;
+  }
+}
+
+
+.bar {
   width: 100%;
   height: 0.8rem;
   background-color: $color-hexagon-grey4;
