--- a/client/src/components/core/Toast/toast.module.scss
+++ b/client/src/components/core/Toast/toast.module.scss
@@ -21,14 +21,14 @@
 }
 
 .title {
-  color: $color-hexagon-main-text-color;
+  color: $color-hexagon-dark;
   font-weight: $font-weight-bold;
   margin: 0 0 0.5rem 0;
 }
 
 .message {
   text-align: left;
-  color: $color-hexagon-grey3;
+  color: $color-hexagon-grey6;
 }
 
 .type-- {
