--- a/client/src/components/dedicated/TimeCounter/style.module.scss
+++ b/client/src/components/dedicated/TimeCounter/style.module.scss
@@ -19,15 +19,15 @@
 .value {
   font-size: $font-size-20;
   font-weight: $font-weight-semibold;
-  color: $color-hexagon-main-text-color;
+  color: $color-hexagon-dark;
 }
 
 .label {
   font-size: $font-size-10;
-  color: $color-hexagon-grey7;
+  color: $color-hexagon-grey9;
 }
 
 .divider {
-  color: $color-hexagon-grey2;
+  color: $color-hexagon-grey3;
   font-size: $font-size-20;
 }
