--- a/client/src/styles/utils/_colors.scss
+++ b/client/src/styles/utils/_colors.scss
@@ -1,24 +1,23 @@
 $color-black: #000000;
 $color-white: #FFFFFF;
-$color-graphite1: #191919;
-$color-grey: #AAAAAA;
-$color-red: #FF0000;
 
-$color-hexagon-grey: #F8F8F8;
-$color-hexagon-grey2: #CDD1CD;
-$color-hexagon-grey3: #9EA39E;
-$color-hexagon-grey4: #EBEBEB;
-$color-hexagon-grey5: #FAFAFA;
-$color-hexagon-grey6: #D9D9D9;
-$color-hexagon-grey7: #685B8A;
-$color-hexagon-grey8: #9E9FA3;
-$color-hexagon-grey9: #E0E0E0;
-$color-hexagon-blue: #141DEF;
-$color-hexagon-blue2: #D9DBFB;
-$color-hexagon-blue3: #CCCEF8;
-$color-hexagon-main-text-color: #271558;
-$color-hexagon-green: #67D274;
-$color-hexagon-green2: #ADE2B3;
+$color-hexagon-dark: #171717;
+$color-hexagon-grey1: #CDCDCD;
+$color-hexagon-grey2: #EBEBEB;
+$color-hexagon-grey3: #CDD1CD;
+$color-hexagon-grey4: #F8F8F8;
+$color-hexagon-grey5: #B5B5B5;
+$color-hexagon-grey6: #9EA39E;
+$color-hexagon-grey7: #FAFAFA;
+$color-hexagon-grey8: #D9D9D9;
+$color-hexagon-grey9: #685B8A;
+$color-hexagon-grey10: #9E9FA3;
+$color-hexagon-grey11: #E0E0E0;
+$color-hexagon-green: #2D9B87;
+$color-hexagon-green2: #5B8A81;
+$color-hexagon-green3: #1D4558;
+$color-hexagon-green4: #D1E7E3;
+$color-hexagon-green5: #ADE2B3;
 $color-hexagon-red: #D0623F;
 $color-hexagon-red2: #E23600;
 $color-hexagon-orange: #FF6157;
