--- a/client/src/components/core/DoubleValue/style.module.scss
+++ b/client/src/components/core/DoubleValue/style.module.scss
@@ -1,5 +1,5 @@
 .root {
-  color: $color-hexagon-main-text-color;
+  color: $color-hexagon-dark;
 }
 
 .mainValue {
@@ -8,4 +8,5 @@
 
 .alternativeValue {
   font-size: $font-size-12;
+  color: $color-hexagon-green2;
 }
