--- a/client/src/components/core/Loader/style.module.scss
+++ b/client/src/components/core/Loader/style.module.scss
@@ -1,6 +1,6 @@
 .root {
-  border: 0.2rem solid $color-hexagon-blue3;
-  border-top-color: $color-hexagon-blue;
+  border: 0.2rem solid $color-hexagon-green4;
+  border-top-color: $color-hexagon-green;
   border-radius: 50%;
   width: 2.2rem;
   height: 2.2rem;
