--- a/client/src/layouts/MainLayout/style.module.scss
+++ b/client/src/layouts/MainLayout/style.module.scss
@@ -31,12 +31,12 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   justify-content: center;
   position: absolute;
   top: -0.4rem;
-  right: 0;
+  right: -0.2rem;
   transform: translate(75%, 0);
   background: $color-white;
   height: 1.6rem;
   box-sizing: content-box;
-  border-radius: 0.8rem;
+  border-radius: 1.2rem;
   padding: 0.4rem 0.5rem;
 }
 
@@ -48,7 +48,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
   color: $color-white;
   letter-spacing: 0.1rem;
   background: $color-hexagon-orange;
-  border-radius: inherit;
+  border-radius: 0.8rem;
   height: 1.6rem;
   padding: 0 0.8rem;
   user-select: none;
@@ -105,7 +105,7 @@ $headerNavigationBorderRadius: calc($headerNavigationHeight / 2);
 
   .navigationBottomSuffix {
     padding: 1.6rem;
-    border-bottom: 0.1rem solid $color-hexagon-grey;
+    border-bottom: 0.1rem solid $color-hexagon-grey4;
   }
 
   .buttons {
