--- a/client/src/styles/utils/_typography.scss
+++ b/client/src/styles/utils/_typography.scss
@@ -1,6 +1,7 @@
 $font-size-base: 10px;
 $font-size-24: 2.4rem;
 $font-size-20: 2rem;
+$font-size-18: 1.8rem;
 $font-size-16: 1.6rem;
 $font-size-14: 1.4rem;
 $font-size-12: 1.2rem;
