--- a/client/src/views/ProposalView/style.module.scss
+++ b/client/src/views/ProposalView/style.module.scss
@@ -57,7 +57,7 @@
   .separator {
     width: 0.1rem;
     height: 1.5rem;
-    background: $color-hexagon-grey9;
+    background: $color-hexagon-grey11;
     margin: 0 0.5rem;
   }
 
@@ -65,7 +65,7 @@
     color: $color-hexagon-red2;
 
     &.isAboveThreshold {
-      color: $color-hexagon-green;
+      color: $color-hexagon-green5;
     }
   }
 }
@@ -80,8 +80,8 @@
   align-items: center;
 
   .buttonWebsite {
-    border-top: 0.1rem solid $color-hexagon-grey;
-    border-bottom: 0.1rem solid $color-hexagon-grey;
+    border-top: 0.1rem solid $color-hexagon-grey4;
+    border-bottom: 0.1rem solid $color-hexagon-grey4;
     padding: 2rem 0;
   }
 }
@@ -90,7 +90,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  background: $color-hexagon-grey;
+  background: $color-hexagon-grey4;
   margin-top: 4rem;
   padding-top: 4rem;
   padding-bottom: $layoutBodyMarginBottom;
@@ -100,7 +100,9 @@
   .header {
     display: flex;
     align-items: center;
-    color: $color-hexagon-main-text-color;
+    justify-content: space-between;
+    width: 100%;
+    color: $color-hexagon-dark;
     font-weight: $font-weight-bold;
     margin-bottom: 2rem;
 
@@ -110,7 +112,7 @@
       height: 2.4rem;
       font-size: $font-size-12;
       color: $color-white;
-      background: $color-hexagon-blue;
+      background: $color-hexagon-green3;
       border-radius: $border-radius-10;
       margin: 0 0 0 1rem;
       padding: 0 1rem;
